fix(pokemon-detail): adjust overlapping heading font-size issue

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -55,7 +55,7 @@ body {
 
 h1 {
   font-family: $font-header-jumbo;
-  font-size: $size-text-xxl;
+  font-size: $size-text-lg;
   font-weight: 500;
 }
 
@@ -65,7 +65,7 @@ h2 {
 }
 
 h3 {
-  font-size: $size-text-xs;
+  font-size: $size-text-sm;
   font-weight: 400;
 }
 
